--- a/05c01 Results with FRED on Single Cell Datasets.ipynb
+++ b/05c01 Results with FRED on Single Cell Datasets.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device cpu\n"
+      "Using device cuda\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('FRED')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
