--- a/papermilled/05d03 scvelo embeddings of sc old metrics/run1_dataset_name-bonemarrow.ipynb
+++ b/papermilled/05d03 scvelo embeddings of sc old metrics/run1_dataset_name-bonemarrow.ipynb
@@ -131,44 +131,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filtered out 7837 genes that are detected 20 counts (shared).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Normalized count data: X, spliced, unspliced.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Filtered out 7837 genes that are detected 20 counts (shared).\n",
+      "Normalized count data: X, spliced, unspliced.\n",
       "Extracted 2000 highly variable genes.\n",
-      "Logarithmized X.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "computing neighbors\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Logarithmized X.\n",
+      "computing neighbors\n",
       "    finished (0:00:04) --> added \n",
       "    'distances' and 'connectivities', weighted adjacency matrices (adata.obsp)\n",
-      "computing moments based on connectivities\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "computing moments based on connectivities\n",
       "    finished (0:00:00) --> added \n",
       "    'Ms' and 'Mu', moments of un/spliced abundances (adata.layers)\n"
      ]
@@ -231,13 +201,7 @@
      "text": [
       "    finished (0:06:35) --> added \n",
       "    'fit_pars', fitted parameters for splicing dynamics (adata.var)\n",
-      "computing velocities\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "computing velocities\n",
       "    finished (0:00:02) --> added \n",
       "    'velocity', velocity vectors for each individual cell (adata.layers)\n",
       "computing velocity graph (using 1/20 cores)\n"
@@ -280,24 +244,12 @@
      "text": [
       "    finished (0:00:09) --> added \n",
       "    'velocity_graph', sparse matrix with cosine correlations (adata.uns)\n",
-      "computing terminal states\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "computing terminal states\n",
       "    identified 3 regions of root cells and 1 region of end points .\n",
       "    finished (0:00:00) --> added\n",
       "    'root_cells', root cells of Markov diffusion process (adata.obs)\n",
       "    'end_points', end points of Markov diffusion process (adata.obs)\n",
-      "computing latent time using root_cells as prior\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "computing latent time using root_cells as prior\n",
       "    finished (0:00:01) --> added \n",
       "    'latent_time', shared time (adata.obs)\n"
      ]
@@ -334,13 +286,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "computing velocity embedding\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "computing velocity embedding\n",
       "    finished (0:00:01) --> added\n",
       "    'velocity_umap', embedded velocity vectors (adata.obsm)\n"
      ]
@@ -411,13 +357,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "computing velocity embedding\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "computing velocity embedding\n",
       "    finished (0:00:01) --> added\n",
       "    'velocity_pca', embedded velocity vectors (adata.obsm)\n"
      ]
