--- a/05c01 Results with FRED on Single Cell Datasets.ipynb
+++ b/05c01 Results with FRED on Single Cell Datasets.ipynb
@@ -10,7 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device cuda\n"
+      "Using device cuda\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
